Some logig added to my app: Create, Edit and Remove Tasks and Lists.

--- a/src/app/add-new-list/add-new-list.component.html
+++ b/src/app/add-new-list/add-new-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  add-new-list works!
-</p>
+<header>
+  <input type="text" placeholder="Añaaaaada la Lista!" (keyup.enter)="addList($event)" />
+  <input type="text" placeholder="Centro del doc" (keyup.enter)="addList($event)" />
+  <input type="text" placeholder="Más info!" (keyup.enter)="addList($event)" />
+</header>
