--- a/src/app/show-lists/show-lists.component.html
+++ b/src/app/show-lists/show-lists.component.html
@@ -1,3 +1,7 @@
-<p>
-  show-lists works!
-</p>
+<section class="showLists">
+  <app-list *ngFor="let listObj of lists" [list]="listObj"> </app-list>
+</section>
+
+<!-- para mostrar el objeto en el HTML - Debbuging -->
+
+<!-- <pre>{{ lists | json }}</pre> -->
