--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -1,3 +1,16 @@
-<p>
-  task works!
-</p>
+<div class="task">
+  <!-- <h4>{{ task.text }}</h4> -->
+  <h4>
+    <span *ngIf="!editing" (dblclick)="editStart()">{{ task.text }}</span>
+    <input autofocus 
+    *ngIf="editing" 
+    type="text" 
+    [(ngModel)]="newTaskText" 
+    (keyup.enter)="editTaskText()" 
+    (blur)="cancelEdit()">
+  </h4>
+
+<div class="controls">
+  <i class="material-icons" (click)="deleteTask()">delete</i></div>
+  <i (click)="editStart()" class="material-icons">edit</i>
+</div>
