Image settings: Custom background image added!

--- a/src/app/show-lists/show-lists.component.scss
+++ b/src/app/show-lists/show-lists.component.scss
@@ -1,7 +1,12 @@
 @import '../../variables.scss';
 
 .showLists {
-  background: linear-gradient(to bottom, rgb(181, 255, 138), #999);
+  // background: linear-gradient(to bottom, rgb(181, 255, 138), #999);
+  background-image: url("../../assets/bg_space.png");
+  background-size: cover;
+	background-repeat: no-repeat;
+	background-attachment: fixed; 
+	background-position: center;
   min-height: calc(100vh - #{$headerHeight});
   padding: 2em;
   display: grid;
