--- a/src/app/add-new-list/add-new-list.component.html
+++ b/src/app/add-new-list/add-new-list.component.html
@@ -1,5 +1,6 @@
 <header>
   <input type="text" placeholder="Añaaaaada la Lista!" (keyup.enter)="addList($event)" />
   <input type="text" placeholder="Centro del doc" (keyup.enter)="addList($event)" />
-  <input type="text" placeholder="Más info!" (keyup.enter)="addList($event)" />
+  <app-extra-info [user]="user"></app-extra-info>
+  <!-- <input type="text" placeholder="Más info!" (keyup.enter)="addList($event)" /> -->
 </header>
