Logo added! Some Css styles fixed!

--- a/src/app/add-new-list/add-new-list.component.html
+++ b/src/app/add-new-list/add-new-list.component.html
@@ -1,6 +1,7 @@
 <header>
-  <input type="text" placeholder="Añaaaaada la Lista!" (keyup.enter)="addList($event)" />
-  <input type="text" placeholder="Centro del doc" (keyup.enter)="addList($event)" />
+  <input class="agregar_tarea" type="text" placeholder="Añada una lista!" (keyup.enter)="addList($event)" />
+  <!-- <input type="text" placeholder="Centro del doc" (keyup.enter)="addList($event)" /> -->
+  <img class="logo" src="../../assets/angular_consola_R.png" alt="">
   <app-extra-info [user]="user"></app-extra-info>
   <!-- <input type="text" placeholder="Más info!" (keyup.enter)="addList($event)" /> -->
 </header>
