--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -46,7 +46,7 @@
     <div class="controls">
       <i (click)="delete()" class="material-icons">delete</i>
       <i (click)="edit(editInput)" class="material-icons">edit</i>
-      <input class="agregarTarea" type="text" placeholder="Añada la tarea!" (keyup.enter)="newTask($event)" />
+      <input class="agregarTarea" type="text" placeholder="Añada una tarea!" (keyup.enter)="newTask($event)" />
 
     </div>
 
