--- a/src/app/extra-info/extra-info.component.html
+++ b/src/app/extra-info/extra-info.component.html
@@ -2,7 +2,7 @@
   
   <button class="btnMoreInfo" (click)=ocultarInfo()>Más info</button>
   <div class="rest" *ngIf="!ocultarData">
-    <h6 class="academic-background">About the project: {{ user.academic }}</h6>
+    <h6 class="academic-background">Project: {{ user.academic }}</h6>
     <h6 class="personal-hobbies">Author: {{ user.name }}</h6>
     <!-- <h5 class="contact-phone">Contacto: {{ user.phone }}</h5> -->
     
