--- a/src/app/extra-info/extra-info.component.scss
+++ b/src/app/extra-info/extra-info.component.scss
@@ -45,7 +45,7 @@ button {
 
 .project-info {
     width: 25vw;
-    border-left: 4px solid #001f3f; 
+    border-left: 4px solid #0379ee; 
     // margin-left: 1rem;
     padding: 0.1rem;
     
