Trying to fix logo image error | Cleaning and refactoring the code

--- a/src/app/add-new-list/add-new-list.component.html
+++ b/src/app/add-new-list/add-new-list.component.html
@@ -1,7 +1,12 @@
 <header>
-  <input class="agregar_tarea" type="text" placeholder="Añada una lista!" (keyup.enter)="addList($event)" />
-  <!-- <input type="text" placeholder="Centro del doc" (keyup.enter)="addList($event)" /> -->
-  <img class="logo" src="../../assets/angular_consola_R.png" alt="">
+  <!-- Add a list -->
+  <input class="agregar_tarea" 
+  type="text" 
+  placeholder="Añada una lista!" 
+  (keyup.enter)="addList($event)" />
+  
+  <!-- Add a logo -->
+  <img class="logo" src="../../assets/consola_R.png" alt="">
   <app-extra-info [user]="user"></app-extra-info>
-  <!-- <input type="text" placeholder="Más info!" (keyup.enter)="addList($event)" /> -->
+ 
 </header>
