--- a/src/app/extra-info/extra-info.component.html
+++ b/src/app/extra-info/extra-info.component.html
@@ -1,10 +1,11 @@
 <div class="project-info">
   
+  <!-- Toggle botton ==> To show or hide some information about the app  -->
   <button class="btnMoreInfo" (click)=ocultarInfo()>Más info</button>
   <div class="rest" *ngIf="!ocultarData">
     <h6 class="academic-background">Project: {{ user.academic }}</h6>
     <h6 class="personal-hobbies">Author: {{ user.name }}</h6>
-    <!-- <h5 class="contact-phone">Contacto: {{ user.phone }}</h5> -->
+    
     
   </div>
 </div>
