Trying another solution to fix image logo issue! ==> Change url link reference

--- a/src/app/add-new-list/add-new-list.component.html
+++ b/src/app/add-new-list/add-new-list.component.html
@@ -6,7 +6,7 @@
   (keyup.enter)="addList($event)" />
   
   <!-- Add a logo -->
-  <img class="logo" src="../../assets/consola_R.png" alt="">
+  <img class="logo" src="assets/consola_R.png" alt="">
   <app-extra-info [user]="user"></app-extra-info>
  
 </header>
